--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,4 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-[data-amplify-authenticator] [data-amplify-router] fieldset {
+/* [data-amplify-authenticator] [data-amplify-router] fieldset {
   display: none;
 }
 [data-amplify-authenticator] .amplify-divider {
@@ -25,7 +9,7 @@ code {
 }
 [data-amplify-authenticator] form + [data-amplify-footer] {
   display: none;
-}
+} */
 
 .authentication {
   position: relative;
